<resources>
    <string name="app_name">DiceRollApp</string>
    <string name="roll">ROLL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left"><![CDATA[<]]></string>
    <string name="right"><![CDATA[>]]></string>
    <string name="d6">D6</string>
    <string name="d10">D10</string>
    <string name="d2">D2</string>
    <string name="d20">D20</string>
</resources>