<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090A1C"
    android:backgroundTint="#090A1C"
    tools:context=".OneActivity" >

    <Button
        android:id="@+id/mutton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:width="50sp"
        android:background="@drawable/nav_button_shape"
        android:text="@string/left"
        android:textColor="@drawable/nav_button_color"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!--Navigation button-->

    <Button
        android:id="@+id/glutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:width="50sp"
        android:background="@drawable/button_shape"
        android:text="@string/d6"
        android:textColor="@drawable/button_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/chutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
    <!--D6 button-->

    <Button
        android:id="@+id/nutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:width="50sp"
        android:background="@drawable/button_shape"
        android:text="@string/d2"
        android:textColor="@drawable/button_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/glutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
    <!--D2 button-->

    <Button
        android:id="@+id/strutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="112dp"
        android:width="50sp"
        android:background="@drawable/button_shape"
        android:text="@string/d20"
        android:textColor="@drawable/button_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
    <!--D20 button-->

    <Button
        android:id="@+id/chutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:width="50sp"
        android:background="@drawable/button_shape"
        android:text="@string/d10"
        android:textColor="@drawable/button_text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/strutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
    <!--D10 button-->

    <TextView
        android:id="@+id/outputText2"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286" />
    <!--Number for selected die-->

</androidx.constraintlayout.widget.ConstraintLayout>